--- a/tutorials/intent-based-classification/pyproject.toml
+++ b/tutorials/intent-based-classification/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "anthropic>=0.76.0",
+    "openai>=2.16.0",
     "pydantic>=2.12.5",
 ]
 
